* io.c (io_unread): fix IO#pos with mode 'r' bug on Windows.   If the end of reading buffer is CR, io_unread() needs to unread one   more byte.   [ruby-core:44874] [Bug #6401]

* test/ruby/test_io_m17n.rb (TestIO_M17N#test_pos_with_buffer_end_cr):
  add a test for above.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@35594 b2dd03c8-39d4-4d8f-98ff-823fe69b080e